# GuessWordX

./: .gitignore  CMakeLists.txt
src/: entry_client.cpp
src/backend/: AbstractRequestEndpoint.h  Backend.cpp  Backend.h  BasicEndpoint.cpp  BasicEndpoint.h  Dispatcher.h  common.h
src/backend/enpoints/: LoginEndpoint.cpp  LoginEndpoint.h  RegisterEndpoint.cpp  RegisterEndpoint.h  UserListEndpoint.cpp  UserListEndpoint.h
src/transports/: Server.cpp  Server.h  common.h
